--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Relax and rejuvenate with Massage by Zai, Bradford’s top-rated therapy center for pain relief, stress reduction, and holistic wellness.">
     <meta name="author" content="therapies-offering-peace.top">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="C3q1DWPagtbrjC-vDRU3GsVGyKybhlFbv7KspWBuCU0" />
     <title>Massage by Zai - Relax Deeply, Heal Completely</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png">
